force-app/main/default/objects/Booking__c/fields/Account_Booking__c.field-meta.xml
<CustomField>
    <fullName>Account_Booking__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>