force-app/main/default/objects/Booking__c/fields/Vacation_Package__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vacation Package</label>
    <referenceTo>Vacation_Package__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>